/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'java'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    maven { url = 'https://jitpack.io' }
}

dependencies {
    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'junit:junit:4.13.2'  
    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.8.1' 
    implementation 'com.github.javaparser:javaparser-core:3.26.3'
    implementation 'com.github.randoop:randoop:4.3.2'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'system.Main'
}


test {
	useJUnitPlatform {
		testLogging {
			events "passed", "skipped", "failed"
		}
	}
}

tasks.register('runRandoop', JavaExec) {
    group = 'verification' // Category of task
    description = 'Execute randoop for testing'

    classpath = files(
        'tools/randoop-all-4.3.2.jar',           // Randoop JAR
        "$buildDir/classes/java/main",              // Compiled classes
        "$buildDir/resources/main"                 // Resources, if any
    )

    // Configure Randoop main class
    mainClass.set('randoop.main.Main')

    // Args
    args = [
        'gentests',                        // Command to generate tests
        '--classlist=src/main/resources/classlist.txt', // List of classes to test
        '--output-limit=1500',              // Amount of tests
        '--junit-output-dir=src/test/java' // Outputs
    ]
}